--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.1.5
+  audioplayers: ^6.5.0
 
 dev_dependencies:
   flutter_test:
@@ -25,7 +26,9 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/tic_tac_toe_icon.png
+    - assets/images/tic_tac_toe_icon.png
+    - assets/sounds/background.mp3
+
 
 flutter_launcher_icons:
   image_path: "assets/tic_tac_toe_icon.png"
